--- a/home.css
+++ b/home.css
@@ -37,6 +37,7 @@ nav{
     justify-content: space-between;
     background: #1876f2;
     padding: .5rem 5%;
+    width: 100vw;
     position: sticky;
     top: 0;
     z-index: 100;
